--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="app">
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-light" style="background-color: #e3f2fd;">
     <a href="#" class="navbar-brand"><img
 		id="profile-img"
 		src="../assets/images/logo-3deprint.png"
