--- a/front/Front3DePrint/src/app/files/list-files/list-files.component.html
+++ b/front/Front3DePrint/src/app/files/list-files/list-files.component.html
@@ -1,15 +1,11 @@
 <div class="card">
-  <div class="card-header">List of Files et merde</div>
+  <div class="card-header">List of Files</div>
   <ul
     class="list-group list-group-flush"
     *ngFor="let file of fileInfos | async"
   >
     <li class="list-group-item">
-      <a href="{{ file.url }}">{{ file.name }}</a>
-      <button class="badge badge-danger mr-2" (click)="deleteFile()">
-    Delete
-  </button>
-
+      <a href="/files/{{ file.name }}">{{ file.name }}</a>
     </li>
   </ul>
 </div>
