--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,9 +1,10 @@
 <div class="card">
-  <div class="card-header">{{ currentFile.name }}</div>
+  <div class="card-header">image</div>
 
     <li class="list-group-item">
-      <a href="{{ currentFile.url }}">{{ CurrentFile.name }}</a>
+      <img [src]="image" alt="image" style="max-width:350px"/>
 
+    </li>
 </div>
 <button class="badge badge-danger mr-2" (click)="deleteFile()">
     Delete
