--- a/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
+++ b/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
@@ -21,14 +21,4 @@
 
 <div class="alert alert-light" role="alert">{{ message }}</div>
 
-<div class="card">
-  <div class="card-header">List of Files</div>
-  <ul
-    class="list-group list-group-flush"
-    *ngFor="let file of fileInfos | async"
-  >
-    <li class="list-group-item">
-      <a href="{{ file.url }}">{{ file.name }}</a>
-    </li>
-  </ul>
-</div>
+<app-list-files></app-list-files>
