--- a/front/Front3DePrint/src/app/users/users.component.html
+++ b/front/Front3DePrint/src/app/users/users.component.html
@@ -14,10 +14,17 @@
 					<div class="flex-row" role="cell"> {{ user.firstname }}</div>
 					<div class="flex-row" role="cell"> {{ user.lastname }}</div>
 					<div class="flex-row" role="cell"> {{ user.email }}</div>
-					<div class="flex-row"  role="cell"><button (click)="deleteUser(user.id)" class="btn btn-danger">Delete</button></div>
+					<div class="flex-row"  role="cell"><button (click)="openModal('custom-modal-1')" class="btn btn-danger">Delete</button></div>
+					<lb-modal id="custom-modal-1">
+						<p>Suppression de l'utilisateur {{user.username}}</p>
+						<p><input type="text" [(ngModel)]="bodyText" /></p>
+						<button (click)="closeModal('custom-modal-1');"class="btn btn-warning">Cancel</button>
+						<button (click)="deleteUser(user.id)" class="btn btn-danger">Delete</button>
+					</lb-modal>
               <div class="flex-row"  role="cell"><button (click)="userDetails(user.id)" class="btn btn-info" style="margin-left: 10px">Details</button></div>
 
 			</div>
 			<pagination-controls (pageChange)="pageChange($event)" class="my-pagination"></pagination-controls>
 			</div>
+
 
