implement updateuser in progress

--- a/front/Front3DePrint/src/app/profile/profile.component.html
+++ b/front/Front3DePrint/src/app/profile/profile.component.html
@@ -20,7 +20,7 @@
     </li>
   </ul>
 </div>
-
+<button (click)="userUpdate(currentUser.userId)" class="btn btn-info" style="margin-left: 10px">Mise à jour de vos informations</button>
 <ng-template #loggedOut>
   Please login.
 </ng-template>
