--- a/front/Front3DePrint/src/app/files/list-files/list-files.component.html
+++ b/front/Front3DePrint/src/app/files/list-files/list-files.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header">List of Files</div>
+  <div class="card-header">Liste des images chargées</div>
   <ul
     class="list-group list-group-flush"
     *ngFor="let file of fileInfos | async"
