--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -3,7 +3,8 @@
 
     <li class="list-group-item">
       <img [src]="image" alt="image" style="max-width:350px"/>
-
+<p>details works!</p>
+<button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour</button>
     </li>
 </div>
 <button class="badge badge-danger mr-2" (click)="deleteFile()">
