--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,8 +1,9 @@
 <div class="card">
   <div class="card-header">image</div>
 
-    <li class="list-group-item">
-      <img [src]="image" alt="image" style="max-width:350px"/>
+    <li class="list-group-item" >
+      <img [src]="thumbnail" alt="image" style="max-width:350px"/>
+
 <p>details works!</p>
 <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour</button>
     </li>
