test for 3d viewer

--- a/front/Front3DePrint/src/app/details/details.component.html
+++ b/front/Front3DePrint/src/app/details/details.component.html
@@ -1,2 +1,2 @@
-<p>details works!</p>
+<p>details is working!</p>
 <button (click)="backToUserlist()" class="btn btn-info" style="margin-left: 10px">Retour</button>
