--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,9 +1,9 @@
 <div class="card">
-  <div class="card-header">image</div>
+  <div class="card-header">image : {{ image.name }} </div>
 
     <li class="list-group-item" >
   <stl-model-viewer class="threedee" [stlModels]="stlfiles"></stl-model-viewer>
-    <stl-model-viewer class="threedee" [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" [stlModels]="['./assets/xwing.stl']"></stl-model-viewer>
+    <stl-model-viewer class="threedee" [meshOptions]="[{position: {x: 2, y: 0, z: 0}}]" [stlModels]="['./assets/xwing.stl']"></stl-model-viewer>
     <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" [stlModels]="[image]"></stl-model-viewer>
     <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" [stlModels]="image"></stl-model-viewer>
     <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" [stlModels]="imagejson"></stl-model-viewer>                
