--- a/front/Front3DePrint/src/app/files/upload-files/upload-files.component.css
+++ b/front/Front3DePrint/src/app/files/upload-files/upload-files.component.css
@@ -1,5 +1,5 @@
-#image {
-    margin: 1rem;
-    border: black 3px solid;
-    border-radius: 0.25rem;
+stl-model-viewer {
+    display: inline-block;
+    height: 25vh;
+    width: 50vw;
 }
