--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -22,10 +22,10 @@
         <a href="/users" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="users">Users</a>
       </li>
       <li class="nav-item">
-        <a href="/upload" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="upload">Upload Files</a>
+        <a href="/upload" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="upload">Charger image</a>
       </li>
        <li class="nav-item">
-        <a href="/files" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="files">Files</a>
+        <a href="/files" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="files">Images</a>
       </li>
     </ul>
 
