--- a/front/Front3DePrint/src/app/board-admin/board-admin.component.html
+++ b/front/Front3DePrint/src/app/board-admin/board-admin.component.html
@@ -1,3 +1,56 @@
+
+<div class="container">
+
+  <div class="card">
+    <div class="card-header">
+      Liste des commandes par utilisateur
+          <INPUT type="radio" name="tri" value="all" checked> toutes
+          <INPUT type="radio" name="tri" value="inProgress"> en cours
+          <INPUT type="radio" name="tri" value="validate"> validée
+          <INPUT type="radio" name="tri" value="done"> Effectuée
+          <INPUT type="radio" name="tri" value="archivate"> Archivée
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Nom utilisateur X, id</h5>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ? </p>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ? </p>
+        <p>Prix final : ? </p>
+        <span>(En cours à valider) </span>
+        <button class="badge badge-success mr-2" (click)="validateCommande()">Valider la commande</button>
+        <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Nom utilisateur Y, id</h5>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ? <button class="badge badge-success mr-2" (click)="showImage()"> Imprimer image</button></p>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ? <button class="badge badge-success mr-2" (click)="showImage()"> Imprimer image</button></p>
+        <p>Prix final : ? </p>
+        <span>(Validé à Effectuer) </span>
+        <button class="badge badge-success mr-2" (click)="makeCommande()">Effectuer la commande</button>(impression BDC + envoie mail au client)
+        <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler</button>        
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Nom utilisateur Z, id</h5>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ?, date : ? </p>
+        <p>Prix final : ? </p>
+        <span>(Effectué à archiver) </span>
+        <button class="badge badge-danger mr-2" (click)="archiveCommande()">Archiver</button>  
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Nom utilisateur A, id</h5>
+        <p class="card-text">Image : nom, Quantité : ?, prix total : ?, date : ?</p>
+        <p>Prix final : ? </p>
+        <p><span>Archivé</span></p>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container">
   <header class="jumbotron">
     <p>{{ content }}</p>
