--- a/front/Front3DePrint/src/app/users/users.component.html
+++ b/front/Front3DePrint/src/app/users/users.component.html
@@ -1,5 +1,6 @@
 <div class="table-container" role="table" aria-label="List of Users">
 	<div class="flex-table header" role="rowgroup">
+		<div class="flex-row" role="columnheader">Id</div>
 		<div class="flex-row" role="columnheader">Username</div>
 		<div class="flex-row" role="columnheader">Fisrtname</div>
 		<div class="flex-row" role="columnheader">Lastname</div>
@@ -8,15 +9,15 @@
 		<div class="flex-row" role="columnheader">+</div>		
 	  </div>
 	  
-			<div class="flex-table row" role="rowgroup" *ngFor="let user of users | paginate: config">
-
+			<div class="flex-table row" role="rowgroup" *ngFor="let user of users; let i =index"[attr.data-index]="i | paginate: config">
+					<div class="flex-row"  role="cell" data-target="#user">{{ user.id }}</div>
 					<div class="flex-row"  role="cell">{{ user.username }}</div>
 					<div class="flex-row" role="cell"> {{ user.firstname }}</div>
 					<div class="flex-row" role="cell"> {{ user.lastname }}</div>
 					<div class="flex-row" role="cell"> {{ user.email }}</div>
 					<div class="flex-row"  role="cell"><button (click)="openModal('custom-modal-1')" class="btn btn-danger">Delete</button></div>
 					<lb-modal id="custom-modal-1">
-						<p>Suppression de l'utilisateur {{user.username}}</p>
+						<p>Suppression de l'utilisateur {{user?.username}} id {{user?.id}}</p>
 						<p><input type="text" [(ngModel)]="bodyText" /></p>
 						<button (click)="closeModal('custom-modal-1');"class="btn btn-warning">Cancel</button>
 						<button (click)="deleteUser(user.id)" class="btn btn-danger">Delete</button>
