--- a/front/Front3DePrint/src/app/details/details.component.html
+++ b/front/Front3DePrint/src/app/details/details.component.html
@@ -1,2 +1,9 @@
-<p>details is working!</p>
+<p>username : {{user.username}}</p>
+<p>prénom : {{user.firstname}}</p>
+<p>nom : {{user.lastname}}</p>
+<p>mail : {{user.email}}</p>
+<p>num : {{address.num}}</p>
+<p>rue : {{address.street}}</p>
+<p>ville : {{address.town}}</p>
+<p>pays : {{address.country}}</p>
 <button (click)="backToUserlist()" class="btn btn-info" style="margin-left: 10px">Retour</button>
