--- a/front/Front3DePrint/src/app/profile/profile.component.html
+++ b/front/Front3DePrint/src/app/profile/profile.component.html
@@ -1,26 +1,27 @@
-<div class="container" *ngIf="currentUser; else loggedOut">
-  <header class="jumbotron">
+<div class="container-fluid">
+  <header class="display-1">
     <h3>
-      <strong>{{ currentUser.username }}</strong> Profile
+      <strong>Profile de {{ user.username }}</strong> 
     </h3>
   </header>
-  <p>
-    <strong>Token:</strong>
-    {{ token.substring(0, 20) }} ...
-    {{ token.substr(token.length - 20) }}
-  </p>
-  <p>
-    <strong>Nom:</strong>
-    {{ username}}
-  </p>
-  <strong>Roles:</strong>
-  <ul>
-    <li *ngFor="let role of roles">
-      {{ role }}
-    </li>
-  </ul>
+
+    <div class="raw">
+      <div>prénom : {{user.firstname}}</div>
+      <div>nom : {{user.lastname}}</div>
+      <div>mail : {{user.email}}</div>
+    </div>
+    <div class="raw">
+    <h4>Adresse</h4>
+      <div class="raw">
+        <div>num : {{address.num}}</div>
+        <div>rue : {{address.street}}</div>
+        <div>ville : {{address.town}}</div>
+        <div>pays : {{address.country}}</div>
+      </div> 
+    </div> 
+
+</div> 
+
+<div *ngIf="!present">
+  <button (click)="userUpdate(currentUser.userId)" class="btn btn-info" style="margin-left: 10px">Renseigner votre addresse</button>
 </div>
-<button (click)="userUpdate(currentUser.userId)" class="btn btn-info" style="margin-left: 10px">Mise à jour de vos informations</button>
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
