--- a/front/Front3DePrint/src/app/user-update/user-update.component.html
+++ b/front/Front3DePrint/src/app/user-update/user-update.component.html
@@ -27,6 +27,6 @@
       <input formControlName="country" placeholder="{{addressData.country}}" name="country" class="form-control" id="country">
     </div>
 
-    <button class="btn btn-success">Update</button>
+    <button class="btn btn-success">Mettre à jour</button>
   </form>
 </div>
