--- a/front/Front3DePrint/src/app/user-update/user-update.component.html
+++ b/front/Front3DePrint/src/app/user-update/user-update.component.html
@@ -4,27 +4,27 @@
   <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
   
     <div>
-      <input type="number" formControlName="id" placeholder="{{id}}" name="id" class="form-control" id="id" readonly="true">
+      <input type="number" formControlName="id" placeholder="{{id}}" name="id" class="form-control" id="id" [(ngModel)]="id" readonly="true">
 	</div>
 	
     <div class="form-group">
       <label for="num">Numéro de rue:</label>
-      <input type="number" formControlName="num" placeholder="{{addressData.num}}" name="num" class="form-control" id="num">
+      <input type="number" formControlName="num" placeholder="{{address.num}}" [(ngModel)]="address.num" name="num" class="form-control" id="num">
     </div>
 
     <div class="form-group">
       <label for="street">Rue:</label>
-      <input formControlName="street" placeholder="{{addressData.street}}" name="street" class="form-control" id="street">
+      <input formControlName="street" placeholder="{{address.street}}" [(ngModel)]="address.street" name="street" class="form-control" id="street">
     </div>
 
     <div class="form-group">
       <label for="town">Ville:</label>
-      <input formControlName="town" placeholder="{{addressData.town}}" name="town" class="form-control" id="town">
+      <input formControlName="town" placeholder="{{address.town}}" [(ngModel)]="address.town" name="town" class="form-control" id="town">
     </div>
 
     <div class="form-group">
       <label for="country">Pays:</label>
-      <input formControlName="country" placeholder="{{addressData.country}}" name="country" class="form-control" id="country">
+      <input formControlName="country" placeholder="{{address.country}}" [(ngModel)]="address.country" name="country" class="form-control" id="country">
     </div>
 
     <button class="btn btn-success">Mettre à jour</button>
