--- a/front/Front3DePrint/src/app/user-update/user-update.component.html
+++ b/front/Front3DePrint/src/app/user-update/user-update.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
   
     <div>
-      <input type="number" formControlName="id" placeholder="{{id}}" name="id" class="form-control" id="id" [(ngModel)]="id" readonly="true">
+      <input type="hidden" formControlName="id" placeholder="{{id}}" name="id" class="form-control" id="id" [(ngModel)]="id" readonly="true">
 	</div>
 	
     <div class="form-group">
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-group">
-      <label for="street">Rue:</label>
+      <label for="street">Type de voie :</label>
       <input formControlName="street" placeholder="{{address.street}}" [(ngModel)]="address.street" name="street" class="form-control" id="street">
     </div>
 
