delete image ok

--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -10,7 +10,7 @@
       <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour aux images</button>
     </li>
   </div>
-<button class="badge badge-danger mr-2" (click)="deleteFile()">
+<button class="badge badge-danger mr-2" (click)="deleteFile(imageId)">
     Supprimer l'image
   </button>
 
