--- a/front/Front3DePrint/src/app/files/list-files/list-files.component.html
+++ b/front/Front3DePrint/src/app/files/list-files/list-files.component.html
@@ -8,7 +8,7 @@
 
       <p>{{ image.name }} 
 
-      <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">Voir</button>
+      <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">Voir et valider pour impression</button>
       </p>
     </li>
     <li *ngIf="role" class="list-group-item">
