--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -3,7 +3,7 @@
 
     <li class="list-group-item" >
   
-      <stl-model-viewer class="threedee" [stlModels]="imagePath"></stl-model-viewer>
+      <stl-model-viewer class="threedee" [stlModels]="['imagePath']"></stl-model-viewer>
   
       <stl-model-viewer [meshOptions]="[{position: {x: 2, y: 0, z: 0}}]" [stlModels]="['./assets/xwing.stl']"></stl-model-viewer>
    
