--- a/front/Front3DePrint/src/app/board-user/board-user.component.html
+++ b/front/Front3DePrint/src/app/board-user/board-user.component.html
@@ -3,26 +3,55 @@
     <p>{{ content }}</p>
   </header>
 </div>
-<div class="container">
 
-  <div class="card">
+<div class="container row">
+
+
+  <div class="col-4">
+  <h3 class="text-center">Devis</h3>
     <div class="card-header">
-      Votre commande
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Nom du modèle 3D 1</h5>
-        <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
+      devis numéro : ?
+
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Nom du modèle 3D 1</h5>
+          <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
+        </div>
       </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Nom du modèle 3D 2</h5>
+          <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
+        </div>
+      </div>
+      <p>Prix total de la commande : ?</p>
+      <button class="badge badge-success mr-2" (click)="acceptCommande()">Valider la commande</button>
+      <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
     </div>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Nom du modèle 3D 2</h5>
-        <p class="card-text">Prix : ? quantité : ? prix total : ?</p>
+  </div>
+  <div class="col-4">
+  <h3 class="text-center">Commandes</h3>
+    <div class="card-header">
+      Commande
+      <div class="card">
+        <div class="card-body">
+        <h5 class="card-title">Numéro de commande : </h5>
+        <p class="card-text">Prix : </p>
+        </div>
       </div>
     </div>
   </div>
-  <p>Prix total de la commande : ?</p>
-    <button class="badge badge-success mr-2" (click)="acceptCommande()">Valider la commande</button>
-    <button class="badge badge-danger mr-2" (click)="rejectCommande()">Annuler la commande</button>
-</div>
+  <div class="col-4">
+  <h3 class="text-center">Historique</h3>
+      <div class="card-header">
+      Anciennes commandes
+   <div class="card">
+        <div class="card-body">
+        <h5 class="card-title">Commande du ?date</h5>
+        </div>
+      </div>
+  </div>
+  </div>
+  </div>
+  
+
