download image ip

--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -2,8 +2,8 @@
   <div class="card-header">image : {{ imageName }} </div>
 
     <li class="list-group-item" >
-  
-      <stl-model-viewer class="threedee" [stlModels]="['imagePath']"></stl-model-viewer>
+    <img [src]="image">
+      <stl-model-viewer class="threedee" [stlModels]="['retrieveImage']"></stl-model-viewer>
   
       <stl-model-viewer [meshOptions]="[{position: {x: 2, y: 0, z: 0}}]" [stlModels]="['./assets/xwing.stl']"></stl-model-viewer>
    
