front update adress ok

--- a/front/Front3DePrint/src/app/profile/profile.component.html
+++ b/front/Front3DePrint/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <header class="display-1">
     <h3>
-      <strong>Profile de {{ user.userName }}</strong> 
+      <strong>Profile de {{user.username}}</strong> 
     </h3>
   </header>
 
