--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -4,7 +4,7 @@
     <li class="list-group-item" >
 
 
-      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" class="threedee" [stlModels]="['./assets/uploads/anne/OneLeg_PLA.stl']"></stl-model-viewer>
+      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" class="threedee" [stlModels]="['./assets/uploads/'+ userName +'/'+ image.name ]"></stl-model-viewer>
    
       <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour aux images</button>
     </li>
