--- a/front/Front3DePrint/src/app/files/list-files/list-files.component.html
+++ b/front/Front3DePrint/src/app/files/list-files/list-files.component.html
@@ -15,7 +15,7 @@
 
       <p>image : {{ image.name }}, proprietaire : {{image.customUserId}}
 
-      <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">Voir</button>
+      <button (click) = "imageDetail(image.id)" class="btn btn-info" style="margin-left: 10px">ouvrir</button>
       </p>
     </li>
   </ul>
