--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,24 +1,23 @@
-<div class="card">
+<div *ngIf="role" class="card">
   <div class="card-header">image : {{ imageName }} </div>
-
     <li class="list-group-item" >
-
-
-      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0}}]" class="threedee" [stlModels]="['./assets/uploads/'+ userName +'/'+ image.name ]"></stl-model-viewer>
-   
+      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0},scale: {x: 0.01,y: 0.01,z: 0.01}}]"  style="height: 50vh" [stlModels]="['./assets/uploads/'+ userName +'/'+ image.name ]"></stl-model-viewer>
       <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour aux images</button>
     </li>
   </div>
-<button class="badge badge-danger mr-2" (click)="deleteFile(imageId)">
-    Supprimer l'image
-  </button>
-
-  <div>
-    <p>prix de la pièce : </p>
-    <p>Quantité : </p>
-    <p>Prix total : </p>
-    <div *ngIf="role">
-      <button class="badge badge-success mr-2" (click)="acceptPrice()">Accepter l'image</button>
+  <div *ngIf="role" >
+    <button class="badge badge-danger mr-2 d-inline p-2" (click)="deleteFile(imageId)">Supprimer l'image</button>
+    <button class="badge badge-success mr-2 d-inline p-2" (click)="acceptPrice()">Accepter l'image</button>
+  </div>
+  <div *ngIf="!role">
+    <button class="badge badge-success mr-2" (click)="acceptPrice()">ouvrir l'image</button>
+    <div>
+      <p>Saisir les données :</p>
+      <div>
+        <p>prix de la pièce : </p>
+        <p>Quantité : </p>
+        <p>Prix total : </p>
+      </div>  
     </div>
   </div>
 
