--- a/front/Front3DePrint/src/app/files/show-file/show-file.component.html
+++ b/front/Front3DePrint/src/app/files/show-file/show-file.component.html
@@ -1,13 +1,24 @@
 <div *ngIf="role" class="card">
-  <div class="card-header">image : {{ imageName }} </div>
+  <div class="card-header">Nom de image : {{ imageName }}</div>
+  <button class="badge badge-danger mr-2 d-inline p-2" (click)="deleteFile(imageId)">Supprimer l'image (définitivement)  </button>
     <li class="list-group-item" >
-      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0},scale: {x: 0.01,y: 0.01,z: 0.01}}]"  style="height: 50vh" [stlModels]="['./assets/uploads/'+ userName +'/'+ image.name ]"></stl-model-viewer>
+      <stl-model-viewer [meshOptions]="[{position: {x: 0, y: 0, z: 0},scale: {x: 0.01,y: 0.01,z: 0.01}}]"  style="height: 40vh" [stlModels]="['./assets/uploads/'+ userName +'/'+ image.name ]"></stl-model-viewer>
       <button (click)="backToImageslist()" class="btn btn-info" style="margin-left: 10px">Retour aux images</button>
     </li>
   </div>
   <div *ngIf="role" >
-    <button class="badge badge-danger mr-2 d-inline p-2" (click)="deleteFile(imageId)">Supprimer l'image</button>
-    <button class="badge badge-success mr-2 d-inline p-2" (click)="acceptPrice()">Accepter l'image</button>
+    <div class="col-md-6 user-container">
+      <h2 class="text-center">Choisir la quantité d'objet à imprimer : </h2>
+      <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+        
+        <div class="form-group">
+          <label for="quantity">Nombre désiré : </label>
+          <input type="number" formControlName="quantity" placeholder="{{ image.quantity }}" [(ngModel)]="image.quantity" name="quantity" class="form-control" id="quantity">
+        </div>
+        <button class="btn btn-success float-right">Ok</button>
+      </form>
+    </div>
+
   </div>
   <div *ngIf="!role">
   
